# auto-radio

./: .gitignore  main.ipynb  main.py  pyproject.toml  ref.py  requirements.txt  vastai.py
.github/workflows/: run_agent.yaml
