[project]
name = "auto-radio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langgraph>=1.2.9",
    "nbconvert>=7.17.1",
    "omnivoice>=0.2.1",
    "openai>=2.46.0",
    "pydub>=0.25.1",
    "torch",
    "torchaudio",
]